<resources>
    <string name="app_name">iTunes Search</string>
    <string name="retry">Retry</string>
    <string name="release_date">Date: %1s</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="search">Search</string>
    <string name="filter_movies">Movies</string>
    <string name="filter_music">Music</string>
    <string name="filter_apps">Apps</string>
    <string name="filter_books">Books</string>
    <string name="no_item_layout_title">No result</string>
    <string name="no_item_layout_content">Try a more general keyword</string>
    <string name="lorem_ipsum_descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="lorem_ipsum_title">Lorem Ipsum</string>
    <string name="detail_no_item_content">We didn\'t find any description about this result.</string>
    <string name="detail_no_item_descr">No Description</string>
</resources>