<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="state"
            type="com.mustafafidan.itunessearch.feature_search.presentation.detail.DetailState" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".feature_search.presentation.detail.DetailFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/white"
                app:contentInsetStart="0dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatImageButton
                        android:onClick="@{state.onBackClicked}"
                        android:id="@+id/clearBtn"
                        android:layout_width="?attr/actionBarSize"
                        android:layout_height="?attr/actionBarSize"
                        android:background="?attr/selectableItemBackground"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_back" />

                    <androidx.cardview.widget.CardView
                        android:visibility="@{state.artistImageUrlVisibility}"
                        android:id="@+id/cv"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginStart="8dp"
                        app:cardCornerRadius="18dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/clearBtn"
                        app:layout_constraintTop_toTopOf="parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:textStyle="bold"
                            android:gravity="center"
                            android:text="@{state.artistFirstWords}"
                            android:id="@+id/artistIv"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="centerCrop" />

                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{state.artistName}"
                        android:id="@+id/appCompatTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView2"
                        app:layout_constraintStart_toEndOf="@+id/cv"
                        app:layout_constraintTop_toTopOf="parent"
                        android:textColor="@color/colorDarkText"
                        tools:text="@string/lorem_ipsum_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:text="@{state.releaseDate}"
                        android:textColor="@color/colorGreyText"
                        android:id="@+id/appCompatTextView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/appCompatTextView"
                        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
                        tools:text="12.01.2021" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:clipToPadding="false"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{state.name}"
                    android:id="@+id/appCompatTextView3"
                    style="@style/DetailTitleTextViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/lorem_ipsum_title" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintGuide_begin="20dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintGuide_end="20dp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@{state.imageUrl}"
                    android:scaleType="centerCrop"
                    android:id="@+id/appCompatImageView2"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3" />

                <LinearLayout
                    android:layout_width="@dimen/no_item_layout_width"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="48dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:visibility="@{state.noItemVisibility}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:tint="@color/colorGrey"
                        app:srcCompat="@drawable/ic_search" />

                    <TextView
                        style="@style/NoItemTitleTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:text="@string/detail_no_item_descr"
                        android:textSize="16sp" />

                    <TextView
                        style="@style/NoItemContentTextViewStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/detail_no_item_content"
                        android:textSize="14sp" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@{state.descr}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="32dp"
                    tools:text="@string/lorem_ipsum_descr"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/colorDarkText"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/guideline3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView2" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>